[package]
name = "saddle-physics-destruction"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-physics-destruction"
license = "MIT-0"
description = "Backend-agnostic destruction toolkit for breakable Bevy structures and pre-fractured assets"

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
