[workspace]
members = [
    "support",
    "basic",
    "structural",
    "hierarchical",
    "thin_surface",
    "stress_test",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
saddle-physics-destruction = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
