[workspace]
members = [
    "support",
    "basic",
    "runtime_fracture",
    "structural",
    "hierarchical",
    "thin_surface",
    "stress_test",
    "lab",
]
resolver = "3"

[workspace.dependencies]
avian3d = { version = "0.6", features = ["serialize"] }
bevy = { version = "0.18", features = ["serialize"] }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-physics-destruction = { path = "..", features = ["avian3d"] }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
