[package]
name = "saddle-physics-destruction-example-support"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_flair = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_ui_widgets = { workspace = true }
saddle-physics-destruction = { workspace = true }
saddle-pane = { workspace = true }

[lints]
workspace = true
